@@ -2,6 +2,9 @@ ChangeLog for herdstat
 
 2005-09-10 Aaron Walker <ka0ttic@gentoo.org>
 
+	* herdstat/exceptions.hh: Added BadDate exception.
+	* herdstat/util/misc.cc: Added utility function str2epoch() that
+	converts a date string to a time_t value.
 	* herdstat/portage/herd.hh, herdstat/portage/developer.hh: Added
 	operators for <, <=, >, and >= so we can use standard sorting algos.
 	* src/action_dev_handler.cc: Don't bail in display() if userinfo.xml
